# ros_openvino

./: CMakeLists.txt  README.md  package.xml
launch/: gpu_demo_webcam.launch  myriad_demo_realsense.launch  myriad_demo_webcam.launch  myriad_object_detection.launch
models/FP16/mobilenet-ssd/: mobilenet-ssd.colors  mobilenet-ssd.xml
models/FP32/mobilenet-ssd/: mobilenet-ssd.xml
msg/: Object.msg  ObjectBox.msg  ObjectBoxList.msg  Objects.msg
rviz/: demo.rviz
src/: object_detection.cpp
